Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-25605

[Reg -> 4.15] QTest Application Output often not scrolling to end of output

    XMLWordPrintable

Details

    • Linux/X11
    •  d9c1ee211a85b407e3ac456a3412b31efa2ee77b

    Description

      I often run QTest tests with Ctrl+R and just watch the application output.

      I noticed recently, that often the Application Output just shows the "Starting ..." line, but does not scroll to the end of the output. E.g. it just happened with Qt Creators tst_lexer unit test.

      Maybe that is related to the fact, that the unit tests run very fast and/or no flushing happens?

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-25605
        # Subject Branch Project Status CR V

        Activity

          People

            kandeler Christian Kandeler
            aha_1980 André Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes