OutputWindow: Reset "scroll to bottom" to default value

... on new build/app start.

Fixes: QTCREATORBUG-25605
Change-Id: I3f478db4c63cf0100c42342deedab9db5ba12042
Reviewed-by: André Hartmann <aha_1980@gmx.de>